Brand color logo, fixed logo wrapping link

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -163,13 +163,13 @@ a img.aligncenter {
 	text-align: center;
 }
 a.page-numbers, span.page-numbers {
-	border: 2px solid #AAAAAA;
+	border: 2px solid $brand-color2;
 	font-size: 1.25rem;
 	margin: 0.5%;
 	padding: 0.85% 1.5%;
 }
 .page-numbers.current {
-	background: none repeat scroll 0 0 #AAAAAA;
+	background: none repeat scroll 0 0 $brand-color2;
 	color: #FFFFFF;
 }
 
@@ -190,7 +190,6 @@ a.page-numbers, span.page-numbers {
 
 #navigation > li {
   background: none repeat scroll 0 0 #FFFFFF;
-  height: 72px;
 }
 
 #navigation li:nth-child(2) {
